Enable swap primary accelerator only when possible

BUG=591241
TEST=manual

Review URL: https://codereview.chromium.org/1759213002

Cr-Commit-Position: refs/heads/master@{#379082}

Former-commit-id: 5e01dfa96782c9d75ea35ad31f24909759ce1455